--- a/extensions/.registry/90032421-663f-475d-aac7-c9fedfcab0b4/package.json
+++ b/extensions/.registry/90032421-663f-475d-aac7-c9fedfcab0b4/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "directus-extension-schema-management-module",
-	"version": "2.0.1",
-	"description": "UI to easily share schema between Directus apps",
+	"name": "directus-extension-currency-interface",
+	"version": "1.1.1",
+	"description": "Interface for currency",
 	"author": {
 		"email": "duydvu98@gmail.com",
 		"name": "Vũ Đức Duy"
@@ -9,30 +9,26 @@
 	"license": "gpl-3.0",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/rezo-labs/directus-extension-schema-management-module.git"
+		"url": "https://github.com/rezo-labs/directus-extension-currency-interface.git"
 	},
 	"keywords": [
 		"directus",
 		"directus-extension",
-		"directus-custom-module"
+		"directus-custom-interface"
 	],
 	"directus:extension": {
-		"type": "module",
+		"type": "interface",
 		"path": "dist/index.js",
 		"source": "src/index.ts",
-		"host": "^11.0.0"
+		"host": "^9.10.0"
 	},
 	"scripts": {
 		"build": "directus-extension build",
 		"dev": "directus-extension build -w --no-minify"
 	},
 	"devDependencies": {
-		"@directus/extensions-sdk": "12.0.1",
-		"sass": "^1.55.0",
+		"@directus/extensions-sdk": "9.10.0",
 		"typescript": "^4.8.4",
-		"vue": "^3.2.40"
-	},
-	"dependencies": {
-		"directus": "^11.13.1"
+		"vue": "^3.2.41"
 	}
 }
